@@ -2,7 +2,6 @@ package ti4.helpers;
 
 import java.util.*;
 import java.util.Map.Entry;
-import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
@@ -12,7 +11,7 @@ import net.dv8tion.jda.internal.utils.tuple.ImmutablePair;
 import net.dv8tion.jda.internal.utils.tuple.Pair;
 
 import ti4.generator.Mapper;
-import ti4.map.Map;
+import ti4.map.Game;
 import ti4.map.Player;
 import ti4.map.UnitHolder;
 import ti4.message.MessageHelper;
@@ -26,20 +25,20 @@ public class CombatHelper {
     public static HashMap<UnitModel, Integer> GetAllUnits(UnitHolder unitHolder, Player player, GenericInteractionCreateEvent event) {
         String colorID = Mapper.getColorID(player.getColor());
         HashMap<String, Integer> unitsByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
-        java.util.Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream().flatMap(
+        Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream().flatMap(
             entry -> player.getUnitsByAsyncID(entry.getKey()).stream().map(x -> new ImmutablePair<>(x, entry.getValue()))
         ).collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
 
-        HashMap<UnitModel, Integer> output = null;
+        HashMap<UnitModel, Integer> output;
        
-        output = new HashMap<UnitModel, Integer>(unitsInCombat.entrySet().stream()
-                    .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
+        output = new HashMap<>(unitsInCombat.entrySet().stream()
+            .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
         
-        Set<String> duplicates = new HashSet<String>();
+        Set<String> duplicates = new HashSet<>();
         List<String> dupes = output.keySet().stream()
             .filter(unit -> !duplicates.add(unit.getAsyncId()))
-            .map(unit -> unit.getBaseType())
-            .collect(Collectors.toList());
+            .map(UnitModel::getBaseType)
+            .toList();
         for(int x = 1; x < dupes.size(); x++){
             String dupe = dupes.get(x);
             for(UnitModel mod : output.keySet()){
@@ -61,28 +60,28 @@ public class CombatHelper {
     public static HashMap<UnitModel, Integer> GetUnitsInCombat(UnitHolder unitHolder, Player player, GenericInteractionCreateEvent event) {
         String colorID = Mapper.getColorID(player.getColor());
         HashMap<String, Integer> unitsByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
-        java.util.Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream().map(
-            entry -> new ImmutablePair<UnitModel, Integer>
-            (
-                player.getPriorityUnitByAsyncID(entry.getKey()),
-                entry.getValue()
-            )
+        Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream().map(
+            entry -> new ImmutablePair<>
+                (
+                    player.getPriorityUnitByAsyncID(entry.getKey()),
+                    entry.getValue()
+                )
         ).collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
 
-        HashMap<UnitModel, Integer> output = null;
-        if (unitHolder.getName() == Constants.SPACE) {
-            output = new HashMap<UnitModel, Integer>(unitsInCombat.entrySet().stream()
-                    .filter(entry -> entry.getKey().getIsShip() != null && entry.getKey().getIsShip())
-                    .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
+        HashMap<UnitModel, Integer> output;
+        if (unitHolder.getName().equals(Constants.SPACE)) {
+            output = new HashMap<>(unitsInCombat.entrySet().stream()
+                .filter(entry -> entry.getKey().getIsShip() != null && entry.getKey().getIsShip())
+                .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
         } else {
-            output = new HashMap<UnitModel, Integer>(unitsInCombat.entrySet().stream()
-                    .filter(entry -> entry.getKey().getIsGroundForce() != null && entry.getKey().getIsGroundForce())
-                    .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
+            output = new HashMap<>(unitsInCombat.entrySet().stream()
+                .filter(entry -> entry.getKey().getIsGroundForce() != null && entry.getKey().getIsGroundForce())
+                .collect(Collectors.toMap(Entry::getKey, Entry::getValue)));
         }
-        Set<String> duplicates = new HashSet<String>();
+        Set<String> duplicates = new HashSet<>();
         List<String> dupes = output.keySet().stream()
             .filter(unit -> !duplicates.add(unit.getAsyncId()))
-            .map(unit -> unit.getBaseType())
+            .map(UnitModel::getBaseType)
             .collect(Collectors.toList());
         List<String> missing = unitHolder.getUnitAsyncIdsOnHolder(colorID).keySet().stream()
             .filter(unit -> player.getUnitsByAsyncID(unit.toLowerCase()).isEmpty())
@@ -106,14 +105,14 @@ public class CombatHelper {
         return output;
     }
 
-    public static Player GetOpponent(Player player, UnitHolder unitHolder, Map activeMap) {
+    public static Player GetOpponent(Player player, UnitHolder unitHolder, Game activeGame) {
         Player opponent = null;
         String playerColorID = Mapper.getColorID(player.getColor());
         Optional<String> opponentColor = unitHolder.getUnitColorsOnHolder().stream()
                 .filter(color -> !color.equals(playerColorID))
                 .findFirst();
         if (opponentColor.isPresent()) {
-            Optional<Player> potentialPlayer = activeMap.getRealPlayers().stream()
+            Optional<Player> potentialPlayer = activeGame.getRealPlayers().stream()
                     .filter(otherPlayer -> Mapper.getColorID(otherPlayer.getColor()).equals(opponentColor.get()))
                     .findFirst();
             if(potentialPlayer.isPresent()){
@@ -123,9 +122,9 @@ public class CombatHelper {
         return opponent;
     }
 
-    public static String RollForUnits(java.util.Map<UnitModel, Integer> units,
+    public static String RollForUnits(Map<UnitModel, Integer> units,
             HashMap<String, Integer> extraRolls, List<NamedCombatModifierModel> customMods, List<NamedCombatModifierModel> autoMods, Player player, Player opponent,
-            Map activeMap) {
+            Game activeGame) {
         String result = "";
 
         List<NamedCombatModifierModel> mods = new ArrayList<>(customMods);
@@ -136,10 +135,10 @@ public class CombatHelper {
         // Display extra rolls info
         List<UnitModel> unitsWithExtraRolls = units.keySet().stream()
                 .filter(unit -> extraRolls.containsKey(unit.getAsyncId()))
-                .collect(Collectors.toList());
+                .toList();
         if (!extraRolls.isEmpty()) {
             result += "With ";
-            ArrayList<String> extraRollMessages = new ArrayList<String>();
+            List<String> extraRollMessages = new ArrayList<>();
             for (UnitModel unit : unitsWithExtraRolls) {
                 String plusPrefix = "+";
                 Integer numExtraRolls = extraRolls.get(unit.getAsyncId());
@@ -154,12 +153,13 @@ public class CombatHelper {
 
         // Actually roll for each unit
         int totalHits = 0;
-        for (java.util.Map.Entry<UnitModel, Integer> entry : units.entrySet()) {
+        StringBuilder resultBuilder = new StringBuilder(result);
+        for (Map.Entry<UnitModel, Integer> entry : units.entrySet()) {
             UnitModel unit = entry.getKey();
             int numOfUnit = entry.getValue();
 
             int toHit = unit.getCombatHitsOn();
-            int modifierToHit = CombatModHelper.GetCombinedModifierForUnit(unit, mods, player, opponent, activeMap);
+            int modifierToHit = CombatModHelper.GetCombinedModifierForUnit(unit, mods, player, opponent, activeGame);
             int extraRollsForUnit = 0;
             if (extraRolls.containsKey(unit.getAsyncId())) {
                 extraRollsForUnit = extraRolls.get(unit.getAsyncId());
@@ -175,9 +175,7 @@ public class CombatHelper {
             }
 
             int[] hitRolls = Arrays.stream(resultRolls)
-                    .filter(roll -> {
-                        return roll >= toHit - modifierToHit;
-                    })
+                    .filter(roll -> roll >= toHit - modifierToHit)
                     .toArray();
 
             String rollsSuffix = "";
@@ -218,16 +216,15 @@ public class CombatHelper {
                 upgradedUnitName = String.format(" %s", unit.getName());
             }
             String unitEmoji = Helper.getEmojiFromDiscord(unit.getBaseType());
-            result += String.format("%s %s%s %s %s - %s hit%s\n", numOfUnit, unitEmoji, upgradedUnitName,
-                    unitTypeHitsInfo,
-                    Arrays.toString(resultRolls), hitRolls.length, rollsSuffix);
+            resultBuilder.append(String.format("%s %s%s %s %s - %s hit%s\n", numOfUnit, unitEmoji, upgradedUnitName,
+                unitTypeHitsInfo,
+                Arrays.toString(resultRolls), hitRolls.length, rollsSuffix));
         }
+        result = resultBuilder.toString();
 
-        String hitEmojis = "";
-        for (int i = 0; i < totalHits; i++) {
-            hitEmojis += ":boom:";
-        }
+        StringBuilder hitEmojis = new StringBuilder();
+        hitEmojis.append(":boom:".repeat(Math.max(0, totalHits)));
         result += String.format("\n**Total hits %s** %s\n", totalHits, hitEmojis);
-        return result.toString();
+        return result;
     }
 }
